refactor: organize search service code